revert unnecessary changes